--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/15 * * * *'
+    - cron:  '15 15 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,11 +24,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Get ARK Trades
+        run: | 
+          wget https://www.ark-funds.com/auto/trades/ARK_ARKK_Trades.xls ,
+          wget https://www.ark-funds.com/auto/trades/ARK_ARKW_Trades.xls , 
+          wget https://www.ark-funds.com/auto/trades/ARK_ARKQ_Trades.xls , 
+          wget https://www.ark-funds.com/auto/trades/ARK_ARKG_Trades.xls , 
+          wget https://www.ark-funds.com/auto/trades/ARK_ARKF_Trades.xls ,
+          wget https://www.ark-funds.com/auto/trades/ARK_PRNT_Trades.xls , 
+          wget https://www.ark-funds.com/auto/trades/ARK_IZRL_Trades.xls . 
+ 
+          
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
