--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+      - run: npm install convert-excel-to-json
+      - run: convert-excel-to-json --help
+
       # Runs a single command using the runners shell
       - name: Get ARK Trades
         run: | 
